--- a/stylee.css
+++ b/stylee.css
@@ -75,12 +75,9 @@ position: relative;
     font-weight: 700;
     transition: background-color 0.3s linear ;
     
-
-
 }
 .button:hover{
     background-color: #6b360b;
-
 }
 
 .header-down {
@@ -105,8 +102,6 @@ position: relative;
     color: black;
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
-
-
 }
 
 .header-suptitle:after {
@@ -137,9 +132,79 @@ position: relative;
     font-weight: 700;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
-
     transition: background-color 0.3s linear;
 }
+
+/* О НАС  start*/
+.history {
+    margin-top: 13%;
+    padding-bottom: 200px;
+    height: 65vh;
+}
+
+.history-holder {
+    display: flex;
+}
+
+.history-info{
+width: 37%;
+background: #ffffff;
+border: solid 2px rgb(188, 102, 188);
+box-shadow: 0px 45px 70px rgba(0, 0, 0, 0.24);
+z-index: 1;
+padding-top: 1.5%;
+padding-bottom: 4%;
+padding-left: 3%;
+border-bottom-right-radius: 30px;
+border-bottom-left-radius: 30px;
+}
+.history-title {
+    font-family: 'Great Vibes', cursive;
+    font-size: 54px;
+    font-weight: 400;
+    width: 444px;
+    text-align: center;
+    margin-top: 21px;
+}
+
+.history-title span {
+    color: rgb(188, 47, 47);
+}
+
+.history-desc {
+    font-family: 'Great Vibes', cursive;
+    color: #2e2d2d;
+    font-size: 16px;
+    width: 444px;
+    text-align: center;
+}
+
+.history-images {
+    position: relative;
+}
+
+.imgages-1 {
+    position: absolute;
+    z-index: 0;
+    top: 59px;
+    left: 111px;
+}
+
+.imgages-2 {
+    position: absolute;
+    z-index: 999;
+    top: -87px;
+    left: 383px;
+}
+
+.imgages-3 {
+    position: absolute;
+    z-index: 999;
+    top: 63%;
+    left:550px;
+}
+
+/* О НАС  end*/
 
 
 
