--- a/stylee.css
+++ b/stylee.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    background-color: aliceblue;
+
 }
 .container{
     margin: 0px 80px; 
