--- a/stylee.css
+++ b/stylee.css
@@ -1,34 +1,46 @@
 body{
-    margin: 0;
     font-family: 'Open Sans', sans-serif;
     background-color: aliceblue;
 
 }
 .container{
-    margin: 0px 80px; 
+    margin-left: 4%; 
 }
 .header{
     background-image: url(https://static.tildacdn.com/tild3037-3739-4536-b135-663030303738/tort-yagody-krem.jpg);
     height: 115vh;
     background-repeat: no-repeat;
     background-size:100%;
-    
 }
 .header-line{
     padding-top: 15px;
     display:flex;
-    align-items:center ;
+    align-items:center;
     justify-content: space-around;
 }
+.header-logo{
+    width: 8%;
+}
+.header-logo>img{
+    width:100%;
+}
+
+.nav{
+    display: flex;
+    flex-wrap: wrap;
+    width:47%;
+    margin-left: 2%;
+    justify-content: space-between;
+}
 .nav-item{
+    width:16%;
+    text-align: center;
     color:black;
     text-decoration: none;
     font-weight: 700;
-    font-size: 25px;
-
+    font-size: 1.5vw;
     margin-right: 15px;
-
-    transition: color 0.3s linear ;
+    transition: color 0.3s linear;
 }
 
 .nav-item:hover{
@@ -36,17 +48,36 @@ body{
 }
 
 .cart{
-position: relative;
-    
-    border-right:  2px solid black ;
-    padding-right: 25px;
-    height: 60px;
+    position: relative;
+    margin-left: 1%;
+    margin-top: -5%;
+    width:4%;
 }
 
 .cart-img{
     position: absolute;
-    top: 18px;
-    right: 7px;
+    height: 55px;
+    width:100%;
+}
+
+.phone{
+    margin-left: 2%;
+    width: 15%;
+}
+
+.phone-holder{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.phone-holder>img{
+    width:12%;
+}
+.phone-holder>a{
+    width:80%;
+    font-size: 1.2vw;
+
 }
 .num{
     color: black;
@@ -54,28 +85,28 @@ position: relative;
     text-decoration: none;
     font-weight: 700;
     transition: color 0.3s linear ;
-
 }
 .num:hover{
     color:darkslategrey;
 }
 .phone-text{
-    font-size: 14px;
+    font-size: 1.1vw;
     font-weight: 400;
     color: black;
 }
-.phone-holder{
-    display: flex;
-    align-items: center;
 
+.btn{
+    width:20%;
+    margin-left: 2%;
 }
 .button{
     background-color: rgb(188, 102, 188);
     color:white;
     text-decoration: none;
-    padding: 14px 18px;
+    padding: 4% 3%;
     font-weight: 700;
-    transition: background-color 0.3s linear ;
+    font-size: 1.1vw;
+    /* transition: background-color 0.3s linear ; */
     
 }
 .button:hover{
@@ -89,20 +120,20 @@ position: relative;
 .header-title {
     color: rgb(205, 69, 92);
     font-family: 'Tinos', serif;
-    font-size: 50px;
+    font-size: 3.5vw;
     font-weight: 400;
 
     text-align: center;
     position: absolute;
     left: 0;
 
-    margin-top: 222px;
+    margin-top: 15%;
     margin-bottom: 12px;
 }
 
 .header-suptitle {
     color: black;
-    font-size: 18px;
+    font-size: 1.15vw;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -110,27 +141,27 @@ position: relative;
     position: absolute;
     content: '';
     height: 2px;
-    width: 61px;
+    width: 12%;
     background-color: black;
-    top: 127px;
-    left: 145px;
+    top: 65%;
+    left: 28%;
 }
 
 .header-suptitle:before {
     position: absolute;
     content: '';
     height: 2px;
-    width: 61px;
+    width:12%;
     background-color: black;
-    top: 127px;
-    left: 337px;
+    top: 65%;
+    left: 61%;
 }
 
 .header-button {
     background-color: rgb(188, 102, 188);
-    padding: 14px 28px;
+    padding: 2.5% 4%;
     color: #fff;
-    font-size: 14px;
+    font-size: 1.25vw;
     font-weight: 700;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
@@ -140,8 +171,8 @@ position: relative;
 /* О НАС  start*/
 .history {
     margin-top: 13%;
-    padding-bottom: 200px;
-    height: 65vh;
+    /* margin-bottom: 8%; */
+
 }
 
 .history-holder {
@@ -149,24 +180,25 @@ position: relative;
 }
 
 .history-info{
-width: 37%;
-background: #ffffff;
-border: solid 2px rgb(188, 102, 188);
-box-shadow: 0px 45px 70px rgba(0, 0, 0, 0.24);
-z-index: 1;
-padding-top: 1.5%;
-padding-bottom: 4%;
-padding-left: 3%;
-border-bottom-right-radius: 30px;
-border-bottom-left-radius: 30px;
+    width: 37%;
+    background: #ffffff;
+    border: solid 2px rgb(188, 102, 188);
+    box-shadow: 0px 45px 70px rgba(0, 0, 0, 0.24);
+    z-index: 1;
+    padding-top: 1.5%;
+    padding-bottom: 4%;
+    padding-left: 3%;
+    border-bottom-right-radius: 7%;
+    border-bottom-left-radius: 7%;
 }
 .history-title {
     font-family: 'Great Vibes', cursive;
-    font-size: 54px;
+    font-size: 3.8vw;
     font-weight: 400;
-    width: 444px;
+    width: 87%;
     text-align: center;
-    margin-top: 21px;
+    margin-top: 5%;
+    margin-bottom: 3%;
 }
 
 .history-title span {
@@ -176,34 +208,40 @@ border-bottom-left-radius: 30px;
 .history-desc {
     font-family: 'Great Vibes', cursive;
     color: #2e2d2d;
-    font-size: 16px;
-    width: 444px;
+    font-size: 1.16vw;
+    width: 94%;
     text-align: center;
 }
 
 .history-images {
     position: relative;
+    width: 40%;
+    margin-left: 3%;
 }
 
 .imgages-1 {
     position: absolute;
     z-index: 0;
-    top: 59px;
-    left: 111px;
+    margin-top: 14%;
+    margin-left: 20%;
+    width:48%;
 }
 
 .imgages-2 {
+    width:43%;
     position: absolute;
     z-index: 999;
-    top: -87px;
-    left: 383px;
+    margin-top: -20%;
+    margin-left: 60%;
 }
 
 .imgages-3 {
+    width:44%;
+    height: 70%;
     position: absolute;
     z-index: 999;
-    top: 63%;
-    left:550px;
+    margin-top: 40%;
+    margin-left: 87%;
 }
 
 /* О НАС  end*/
