--- a/stylee.css
+++ b/stylee.css
@@ -319,13 +319,143 @@ h6 {
 
 
 
-
-
-
 /* MENU START */
+.menu_title{
+    font-family: 'Great Vibes', cursive; 
+    font-size: 3.5vw; 
+    /* margin-left: 45%; */
+}
+.menu{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 7%;
+    margin-top: 3%;
+    justify-content: space-around;
+}
+.menu>div{
+    display: flex;
+    flex-direction: column;
+    width: 27%;
+    height: 10%;
+}
 
+.ftco-section {
+height: 70vh;
+padding: 7em 0;
+position: relative;
+}
+
+.heading-section {
+position: relative;
+}
+
+.heading-section .subheading {
+text-align: center;
+position: absolute;
+left: 5%;
+bottom: -2.5%;
+right: 5%;
+font-weight: normal;
+font-size: 7vw;
+display: block;
+/* margin-bottom: 0; */
+color: rgba(0, 0, 0, 0.2);
+color: #c8a97e;
+line-height: 1;
+/* margin-top: 0; */
+z-index: -1;
+font-family: "Great Vibes", cursive;
+}
+
+
+.menu-wrap {
+height: 30%;
+}
+
+.heading-menu h3 {
+font-size: 1.6vw;
+font-weight: 900;
+margin-top: -5%;
+text-align:center;
+}
+
+.menus {
+height: 60px;
+width: 100%;
+margin-bottom: 4%;
+padding-bottom: 3%;
+border: 1px solid #e6e6e6;
+padding: 30px 20px;
+border-radius: 5px;
+transition: all 0.3s ease;
+}
+
+.menus .text {
+width: 100%;
+margin-left: 34%;
+margin-top: -24%;
+}
+
+.menus .text .one-half {
+width: calc(100% - 80px);
+}
+
+.menus .text .one-half h3 {
+font-size: 1.4vw;
+font-weight: 500;
+}
+
+.menus .text .one-forth {
+width: 80px;
+text-align: right;
+}
+
+.menus .text .one-forth .price {
+font-size: 1.2vw;
+color: rgba(0, 0, 0, 0.2);
+color: #000000;
+font-weight: 600;
+line-height: 1.3;
+transition: all 0.3s ease;
+border-bottom: 2px solid #ff2377;
+}
+
+.menus .text p {
+font-size: 1vw;
+margin-bottom: 0;
+color: rgba(0, 0, 0, 0.8);
+}
+.menus .menu-img {
+height: 130%;
+width: 30%;
+border-radius: 50%;
+background-size: 100%;
+}
+
+.menus:hover {
+border: 1px solid #ff2377;
+background: linear-gradient(
+    235deg,
+    rgba(231, 111, 169, 0.741) 30%,
+    rgba(165, 77, 124, 0.763) 67%
+);
+}
+
+.menus:hover .text .one-forth .price {
+color: #ffffff;
+border-bottom: 2px solid #ffffff;
+}
+
+.menus:hover .text p {
+color: rgba(0, 0, 0, 0.8);
+}
 
 /* MENU END */
+
+
+
+
 
 
 
