--- a/stylee.css
+++ b/stylee.css
@@ -2,7 +2,6 @@ body{
     font-family: 'Open Sans', sans-serif;
     background-color: aliceblue;
     margin:-1.5% 0%;
-
 }
 .container{
     margin-left: 4%; 
@@ -240,7 +239,6 @@ body{
 
 .imgages-3 {
     width:44%;
-    height: 70%;
     position: absolute;
     z-index: 999;
     margin-top: 40%;
@@ -250,72 +248,113 @@ body{
 /* О НАС  end*/
 
 
+
+
+
+
+
+
 /* Gallery START */
 @import url(
 'https://fonts.googleapis.com/css2?family=Yaldevi:wght@200;300;400;500;600;700&display=swap');
 
-* {
-	margin: 0;
-	padding: 0;
-	font-family: 'Yaldevi', sans-serif;
+
+.myProducts {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.myProducts>div{
+    width: 50%;
+    background-color: #6b360b;
 }
 
-h1 {
-	color: green;
-	font-size: 80px;
-	font-weight: bold;
-	text-align: center;
-	padding-top: 22px;
+.myProducts-gallery {
+    /* float: left; */
+    /* width: 500px; */
+    /* position: absolute; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
+
+}
+.myProducts-gallery>div{
+    width: 50%;
+    background-color: #ff2377;
+    margin-left: 50%;
 }
 
-h6 {
-	color: green;
-	font-size: 20px;
-	font-weight: bold;
-	text-align: center;
-	padding-top: 60px;
-	margin-bottom: 20px;
-}
 
 .myProducts-gallery img{
-	height: 92px;
-	margin: 10px 0;
+    /* width: 30%; */
+    /* height: auto; */
+	/* margin: 35px; */
 	cursor: pointer;
 	display: block;
-	opacity: .5;
+	opacity: 0.5;
 }
 
 .myProducts-gallery img:hover {
 	opacity: 1;
 }
 
-.myProducts-gallery {
-	float: left;
-}
-
-.myProducts {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50% , -50%);
-	position: absolute;
+.image-container {
+    background-color: aqua;
+    /* position: absolute; */
+    /* width: 80%; */
+	/* float: right; */
+	/* padding-left: 40%;
+    margin-top: 20%; */
 }
 
 .image-container img {
-	height: 400px;
-	transition: transform 1s;
+    /* margin-left: 15%;
+    margin-top: 0%; */
+	/* height: 100%;
+    width: 90%; */
+	/* transition: transform 1s; */
+    background-color: #6b360b;
 }
 
 .image-container img:hover{
-	transform: scale(1.5);
+	transform: scale(1.6);
 	cursor: zoom-in;
 }
 
-.image-container {
-	float: right;
-	padding: 10px;
+/* @media screen and (max-width: 414px) {
+    .myProducts{
+        margin-top: 60%;
+    }
+     .myProducts-gallery{
+	height: 280px; 
+    }
 }
+@media screen and (max-width: 768px) {
+    .myProducts{
+        margin-top: 70%;
+    }
+     .myProducts-gallery{
+	height: 430px;
+     } 
+}
+@media screen and (max-width: 1090px) {
+    .myProducts{
+        margin-top: 24%;
+    }
+} */
 
 /* Gallery END */
+
+
+
+
+
+
+
+
+
 
 
 
@@ -323,7 +362,6 @@ h6 {
 .menu_title{
     font-family: 'Great Vibes', cursive; 
     font-size: 3.5vw; 
-    /* margin-left: 45%; */
 }
 .menu{
     display: flex;
@@ -332,6 +370,8 @@ h6 {
     padding: 7%;
     margin-top: 3%;
     justify-content: space-around;
+    background-image: url(https://static.tildacdn.com/tild3037-3739-4536-b135-663030303738/tort-yagody-krem.jpg);
+   
 }
 .menu>div{
     display: flex;
@@ -353,24 +393,22 @@ position: relative;
 .heading-section .subheading {
 text-align: center;
 position: absolute;
-left: 5%;
 bottom: -2.5%;
-right: 5%;
 font-weight: normal;
 font-size: 7vw;
 display: block;
-/* margin-bottom: 0; */
 color: rgba(0, 0, 0, 0.2);
 color: #c8a97e;
 line-height: 1;
-/* margin-top: 0; */
 z-index: -1;
 font-family: "Great Vibes", cursive;
+opacity: 0.1;
 }
 
 
 .menu-wrap {
 height: 30%;
+opacity: 0;
 }
 
 .heading-menu h3 {
@@ -385,7 +423,7 @@ height: 60px;
 width: 100%;
 margin-bottom: 4%;
 padding-bottom: 3%;
-border: 1px solid #e6e6e6;
+border: 2px solid black;
 padding: 30px 20px;
 border-radius: 5px;
 transition: all 0.3s ease;
@@ -393,8 +431,8 @@ transition: all 0.3s ease;
 
 .menus .text {
 width: 100%;
-margin-left: 34%;
-margin-top: -24%;
+margin-left: 32%;
+margin-top: -36%;
 }
 
 .menus .text .one-half {
@@ -451,12 +489,32 @@ border-bottom: 2px solid #ffffff;
 color: rgba(0, 0, 0, 0.8);
 }
 
+@media screen and (min-width: 1500px) {
+    .menus .text .one-half h3 {
+        font-size: 1.25vw;
+    }
+    .menus .text .one-forth .price {
+        font-size: 1.05vw;
+    }
+    .menus .text {
+        margin-top: -33%;
+    }
+    .menus{
+        height: 75px;
+    }
+       
+}
+
 /* MENU END */
 
 
 
 
 
+/* Ассортимент START */
 
 
 
+
+
+/* Ассортимент END */
