--- a/style2.css
+++ b/style2.css
@@ -1,86 +1,249 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
-
-*{
-   font-family: 'Montserrat', sans-serif;
-   margin:0; padding:0;
-   box-sizing: border-box;
-   outline: none; border:none;
-   text-decoration: none;
-   text-transform: capitalize;
-   transition: all .2s linear;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap'); 
+ 
+*{ 
+   font-family: 'Montserrat', sans-serif; 
+   margin:0; padding:0; 
+   box-sizing: border-box; 
+   outline: none; border:none; 
+   text-decoration: none; 
+   text-transform: capitalize; 
+   transition: all .2s linear; 
+} 
+ 
+body{ 
+  background-color: #eee; 
+} 
+ 
+.container{ 
+  padding:25px 10%; 
+  text-align: center; 
+} 
+ 
+.container .heading{ 
+  font-size: 30px; 
+  padding-bottom: 25px; 
+} 
+ 
+.container #search-box{ 
+  width: 600px; 
+  border:3px solid #000; 
+  padding:12px 15px; 
+  font-size: 20px; 
+} 
+ 
+.container .image-container{ 
+  display: flex; 
+  justify-content: center; 
+  flex-wrap: wrap; 
+  gap:20px; 
+  padding-top: 30px; 
+} 
+ 
+.container .image-container .image{ 
+  padding:15px; 
+  background-color: #fff; 
+  box-shadow: 0 5px 10px rgba(0,0,0,.1); 
+  border:2px solid #000; 
+  width: 350px; 
+  border-radius: 5px; 
+  animation: fadeIn .2s linear; 
+} 
+ 
+@keyframes fadeIn { 
+  0%{ 
+    transform: scale(.5) translateY(-10px); 
+    opacity: 0; 
+  } 
+} 
+ 
+.container .image-container .image img{ 
+  height: 250px; 
+  width: 100%; 
+  object-fit: cover; 
+  margin-bottom: 10px; 
+  border-radius: 5px; 
+} 
+ 
+.container .image-container .image h3{ 
+  font-size: 20px; 
+} 
+ 
+@media (max-width:768px){ 
+  .container #search-box{ 
+    width: 100%; 
+  } 
+} 
+ 
+@media (max-width:450px){ 
+ 
+  .container{ 
+    padding:25px 20px; 
+  } 
+ 
+  .container .image-container .image{ 
+    width: 100%; 
+  } 
 }
 
-body{
-  background-color: #eee;
+/* HEADER STYLE */
+.header{
+    background-image: url(https://static.tildacdn.com/tild3037-3739-4536-b135-663030303738/tort-yagody-krem.jpg);
+    height: 115vh;
+    background-repeat: no-repeat;
+    background-size:100%;
+}
+.header-line{
+    padding-top: 1%;
+    display:flex;
+    align-items:center;
+    justify-content: space-around;
+}
+.header-logo{
+    width: 8%;
+}
+.header-logo>img{
+    width:100%;
 }
 
-.container{
-  padding:25px 10%;
-  text-align: center;
+.nav{
+    display: flex;
+    flex-wrap: wrap;
+    width:47%;
+    margin-left: 2%;
+    justify-content: space-between;
+}
+.nav-item{
+    width:16%;
+    text-align: center;
+    color:black;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.5vw;
+    margin-right: 15px;
+    transition: color 0.3s linear;
 }
 
-.container .heading{
-  font-size: 30px;
-  padding-bottom: 25px;
+.nav-item:hover{
+    color:tomato;
 }
 
-.container #search-box{
-  width: 600px;
-  border:3px solid #000;
-  padding:12px 15px;
-  font-size: 20px;
+.cart{
+    position: relative;
+    margin-left: 1%;
+    margin-top: -5%;
+    width:4%;
 }
 
-.container .image-container{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap:20px;
-  padding-top: 30px;
+.cart-img{
+    position: absolute;
+    height: 55px;
+    width:100%;
 }
 
-.container .image-container .image{
-  padding:15px;
-  background-color: #fff;
-  box-shadow: 0 5px 10px rgba(0,0,0,.1);
-  border:2px solid #000;
-  width: 350px;
-  border-radius: 5px;
-  animation: fadeIn .2s linear;
+.phone{
+    margin-left: 2%;
+    width: 15%;
 }
 
-@keyframes fadeIn {
-  0%{
-    transform: scale(.5) translateY(-10px);
-    opacity: 0;
-  }
+.phone-holder{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
-.container .image-container .image img{
-  height: 250px;
-  width: 100%;
-  object-fit: cover;
-  margin-bottom: 10px;
-  border-radius: 5px;
+.phone-holder>img{
+    width:12%;
+}
+.phone-holder>a{
+    width:80%;
+    font-size: 1.2vw;
+
+}
+.num{
+    color: black;
+    text-transform: none;
+    text-decoration: none;
+    font-weight: 700;
+    transition: color 0.3s linear ;
+}
+.num:hover{
+    color:darkslategrey;
+}
+.phone-text{
+    font-size: 1.1vw;
+    font-weight: 400;
+    color: black;
 }
 
-.container .image-container .image h3{
-  font-size: 20px;
+.btn{
+    width:20%;
+    margin-left: 2%;
+}
+.button{
+    background-color: rgb(188, 102, 188);
+    color:white;
+    text-decoration: none;
+    padding: 4% 3%;
+    font-weight: 700;
+    font-size: 1.1vw;
+    /* transition: background-color 0.3s linear ; */
+    
+}
+.button:hover{
+    background-color: #6b360b;
 }
 
-@media (max-width:768px){
-  .container #search-box{
-    width: 100%;
-  }
+.header-down {
+    position: relative;
 }
 
-@media (max-width:450px){
+.header-title {
+    color: rgb(205, 69, 92);
+    font-family: 'Tinos', serif;
+    font-size: 3.5vw;
+    font-weight: 400;
 
-  .container{
-    padding:25px 20px;
-  }
+    text-align: center;
+    position: absolute;
+    left: 0;
 
-  .container .image-container .image{
-    width: 100%;
-  }
+    margin-top: 15%;
+    margin-bottom: 12px;
+}
+
+.header-suptitle {
+    color: black;
+    font-size: 1.15vw;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.header-suptitle:after {
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 12%;
+    background-color: black;
+    top: 65%;
+    left: 28%;
+}
+
+.header-suptitle:before {
+    position: absolute;
+    content: '';
+    height: 2px;
+    width:12%;
+    background-color: black;
+    top: 65%;
+    left: 61%;
+}
+
+.header-button {
+    background-color: rgb(188, 102, 188);
+    padding: 2.5% 4%;
+    color: #fff;
+    font-size: 1.25vw;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    transition: background-color 0.3s linear;
 }
